--- a/src/assets/sass/pages/home.scss
+++ b/src/assets/sass/pages/home.scss
@@ -42,6 +42,13 @@
     line-height: toRem(28);
     color: #3d5170;
   }
+  .card-connect {
+    .connect-btns {
+      .btn {
+        width: 149px;
+      }
+    }
+  }
 }
 
 @include media-breakpoint-down(sm) {
